[gd_scene load_steps=5 format=3 uid="uid://bdd7kr8i8o0dx"]

[ext_resource type="FontFile" uid="uid://dttdqnx855wtb" path="res://fonts/ShipporiAntique-Medium.otf" id="1_1ooi2"]
[ext_resource type="Script" path="res://game_client/deck_build/main.gd" id="1_fvkqa"]
[ext_resource type="PackedScene" uid="uid://b2wxiqxqi7uw2" path="res://game_client/deck_build/building/building.tscn" id="3_i2sba"]

[sub_resource type="Theme" id="Theme_lr34a"]
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("1_1ooi2")

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_lr34a")
script = ExtResource("1_fvkqa")

[node name="building" parent="." instance=ExtResource("3_i2sba")]
visible = false
layout_mode = 1

[node name="Menu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelLeft" type="Panel" parent="Menu/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ButtonBack" type="Button" parent="Menu/HBoxContainer/PanelLeft"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 264.0
offset_bottom = 72.0
text = "BACK"

[node name="ScrollContainer" type="ScrollContainer" parent="Menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="PanelRight" type="Panel" parent="Menu/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ButtonEdit" type="Button" parent="Menu/HBoxContainer/PanelRight"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = -88.0
offset_right = -24.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "EDIT"

[node name="ButtonNew" type="Button" parent="Menu/HBoxContainer/PanelRight"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = -184.0
offset_right = -24.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0
text = "NEW"

[connection signal="exit" from="building" to="." method="_on_building_exit"]
[connection signal="saved" from="building" to="." method="_on_building_saved"]
[connection signal="pressed" from="Menu/HBoxContainer/PanelLeft/ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/PanelRight/ButtonEdit" to="." method="_on_button_edit_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/PanelRight/ButtonNew" to="." method="_on_button_new_pressed"]
